clone template from iyanski/betterlocalgov

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,9 +1,9 @@
 {
-  "site_name": "Lapu Lapu City Portal",
-  "site_description": "A community-run portal for the Lapu Lapu City",
+  "site_name": "Municipality of Plaridel Portal",
+  "site_description": "A community-run portal for the Municipality of Plaridel",
   "hero": {
     "title": "Welcome to BetterGov.ph",
-    "subtitle": "A community-run portal to find information of the Lapu Lapu City Government",
+    "subtitle": "A community-run portal to find information of the Municipality of Plaridel Government",
     "nationalId": "National ID",
     "birthCertificate": "Birth Certificate",
     "businessRegistration": "Business Registration"
@@ -29,7 +29,7 @@
     "title": "Latest News & Updates"
   },
   "footer": {
-    "copyright": "© 2025 BetterGov. All content is public domain unless otherwise specified."
+    "copyright": "© 2026 BetterGov. All content is public domain unless otherwise specified."
   },
   "navbar": {
     "government": "Your Government",
